# teamup_iqeq

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
teamup/: asgi.py  settings.py  urls.py  wsgi.py
